<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="?attr/actionBarTheme"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:subtitleTextColor="?attr/colorOnPrimary"
            app:titleTextColor="?attr/colorOnPrimary">

            <ImageView
                android:id="@+id/toolbarLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/cafe_logo_description"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/toolbarTitle"
                style="?attr/textAppearanceTitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="0dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnPrimary" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRecyclerView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/md_theme_secondaryContainer"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            tools:listitem="@layout/item_category_left_panel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorOutlineVariant"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dishesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:paddingHorizontal="8dp"
                tools:listitem="@layout/item_user_menu" />

            <TextView
                android:id="@+id/emptyDishesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_dishes_message"
                style="?attr/textAppearanceBodyLarge"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:gravity="center"
                android:padding="24dp"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/cartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="Корзина"
        app:icon="@drawable/ic_shopping_cart" />

    <ProgressBar
        android:id="@+id/mainProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>